Main controller routing to Weather List

--- a/SampleSwift/Base.lproj/Main.storyboard
+++ b/SampleSwift/Base.lproj/Main.storyboard
@@ -63,5 +63,38 @@
             </objects>
             <point key="canvasLocation" x="156" y="81"/>
         </scene>
+        <!--Weather List View Controller-->
+        <scene sceneID="nIP-eP-nDI">
+            <objects>
+                <viewController storyboardIdentifier="weatherListViewControllerId" id="7tE-Ug-amO" customClass="WeatherListViewController" customModule="SampleSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KJb-j2-HEc"/>
+                        <viewControllerLayoutGuide type="bottom" id="yoE-WA-K3I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6SP-OM-Qrt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdb-9R-ewy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bdb-9R-ewy" firstAttribute="top" secondItem="KJb-j2-HEc" secondAttribute="bottom" id="JOg-51-8E9"/>
+                            <constraint firstItem="yoE-WA-K3I" firstAttribute="top" secondItem="Bdb-9R-ewy" secondAttribute="bottom" id="cxh-ft-vxS"/>
+                            <constraint firstItem="Bdb-9R-ewy" firstAttribute="leading" secondItem="6SP-OM-Qrt" secondAttribute="leading" id="jRR-kW-MuO"/>
+                            <constraint firstAttribute="trailing" secondItem="Bdb-9R-ewy" secondAttribute="trailing" id="sgh-et-SQD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Bdb-9R-ewy" id="rzp-2W-wzG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5wA-2T-emN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="897" y="81"/>
+        </scene>
     </scenes>
 </document>
